carousel spacing issues on low res

--- a/src/assets/scss/pages/homepage.scss
+++ b/src/assets/scss/pages/homepage.scss
@@ -220,6 +220,14 @@ $homepage-background: #eaf8f3;
     .carousel-container {
         display: flex;
         align-items: center;
+        width: 100%;
+        margin-left: 0%;
+        height: 100%;
+
+        @media screen and (min-width: $screen-sm) {
+            width: 90%;
+            margin-left: 5%;
+        }
     }
 
     h1 {
